k8s/v1.37.0/clusters/dev/istio-ingress/kubernetes-objects/elastic-gateway-https-passthrough.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: elastic-gateway-tls-passthrough
  namespace: istio-ingress
spec:
  selector:
    istio: ingress-dev
  servers:
    - port:
        number: 443
        name: elastic-https-passthrough
        protocol: HTTPS
      hosts:
        - elastic.maifuj.com
      tls:
        mode: PASSTHROUGH
